Create local storage demo

--- a/week02/localStorage.html
+++ b/week02/localStorage.html
@@ -3,9 +3,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Local Storage Demo</title>
 </head>
 <body>
-    <script></script>
+    <script>
+        // Basic localStorage demo
+        localStorage.setItem('test', 1);
+        alert(localStorage.getItem('test'));
+    </script>
 </body>
 </html>
