--- a/week02/localStorage.html
+++ b/week02/localStorage.html
@@ -4,20 +4,75 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Local Storage Demo</title>
+    <style>
+        body {
+            margin: 0;
+            transition: background-color 0.5s;
+        }
+
+        label {
+            margin-right: 10px;
+        }
+
+    </style>
 </head>
 <body>
+    <h1>Color Preference Example</h1>
+    <label for="colorSelect">Choose a color:</label>
+    <select name="" id="colorSelect">
+        <option value="red">Red</option>
+        <option value="blue">Blue</option>
+    </select>
     <script>
         // Basic localStorage demo
-        localStorage.setItem('test', 1);
-        alert(localStorage.getItem('test'));
+        // localStorage.setItem('test', 1);
+        // alert(localStorage.getItem('test'));
 
         // Loop through storage objects as an array
-        for(let key in localStorage) {
-            if (!localStorage.hasOwnProperty(key)) {
-                continue; // skip keys that we don't need like "setItem" and "getItem" etc
+        // for(let key in localStorage) {
+        //     if (!localStorage.hasOwnProperty(key)) {
+        //         continue; // skip keys that we don't need like "setItem" and "getItem" etc
+        //     }
+        //     alert(`${key}: ${localStorage.getItem(key)}`);
+        // }
+
+        // Return only the keys that belong to the object
+        // let keys = Object.keys(localStorage);
+        // for(let key of keys) {
+        //     alert(`${key}: ${localStorage.getItem(key)}`);
+        // }
+
+        // localStorage practice
+        document.addEventListener("DOMContentLoaded", function () {
+            // Retrieve color preference from localStorage if available
+            const savedColor = localStorage.getItem("color");
+
+            // Set initial color based on user's preference or default to "red"
+            const initialColor = savedColor || "red";
+            applyColor(initialColor);
+
+            // Add event listener to the color select dropdown
+            const colorSelect = document.querySelector("#colorSelect");
+            colorSelect.addEventListener("change", function () {
+                const selectedColor = colorSelect.value;
+
+                // Update the color and store the preference in localStorage
+                applyColor(selectedColor);
+                localStorage.setItem("color", selectedColor);
+            });
+
+            // Alert the "color" key and its value
+            for (let key of keys) {
+                if (key === "color") {
+                    alert(`${key}: ${localStorage.getItem(key)}`);
+                }
             }
-            alert(`${key}: ${localStorage.getItem(key)}`);
-        }
+
+            // Function to apply the selected color
+            function applyColor(color) {
+                document.body.style.backgroundColor = color;
+            }
+        });
     </script>
 </body>
 </html>
