--- a/week02/autosave.html
+++ b/week02/autosave.html
@@ -8,7 +8,8 @@
 <body>
     <h1>Autosave Text Area</h1>
     <textarea id="textarea" style="width: 200px; height: 60px;" placeholder="Write here"></textarea>
-    <button>
+    <!-- Allow clear button to clear localStorage -->
+    <button onclick="localStorage.removeItem('autosaveText'); textarea.value=''">
         Clear
     </button>
 
